# turboquant_plus

./: CLAUDE.md  README.md  demo_run.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml
benchmarks/: benchmark_mlx_backend.py  benchmark_rotorquant.py  validate_real_model.py
docs/: attention-gated-optimizations.md  decode-speed-hardware-analysis.md  experiment-decode-fp16-lut-results.md  experiment-temporal-decay.md  getting-started.md  long-context-sparse-v-validation.md  smem-dequant-experiment.md  turbo4-rematch-2026-06.md  turboquant-enhancements.md  turboquant-recommendations.md  weight-compression-results.md
docs/community-hardware/: m4-pro-48gb.md
docs/papers/: asymmetric-kv-compression.md  attn-rotation-and-ppl-artifact.md  dflash-self-draft-investigation.md  eden-optimal-s-revisit.md  forgeattention-fused-metal-kernels.md  sparse-v-dequant.md  triattention-hybrid-recipe.md  villines-probe-validation.md
refract/: CHANGELOG.md  QUICKSTART.md  README.md  __init__.py  cli.py  report.py  runner.py  score.py
refract/axes/: __init__.py  gtm.py  kld.py  plad.py
refract/backends/: __init__.py
refract/tests/: test_unit.py  test_validation.py
tests/: forge_common.py  test_codebook.py  test_codebook_beta.py  test_fused_attention.py  test_kv_cache.py  test_layer_adaptive.py  test_mlx_backend.py  test_temporal_decay.py  test_turbo_hardware_diag.py
turboquant/: __init__.py  calibration.py  clifford.py  codebook.py  kv_cache.py  layer_adaptive.py  mlx_backend.py  mlx_calibration.py  mlx_fused_attention.py  outlier.py  qjl.py  rotorquant.py  temporal_decay.py  turboquant.py
villines-probe/: biascorr_qwen3b.json  calib.txt  k_channel_stats.py  kstats_mistral7b.json  kstats_qwen25_7b_instruct.json  kstats_qwen3_8b.json  results_T2_sweep_qwen3b_m5max.json  results_T3_biascorr_qwen3b_m5max.json  results_T4_qwen7b_sweep_m5max.json  results_T4mse_qwen7b_instruct_m5max.json  results_mistral7b_m5max.json  results_qwen3_8b_biassub_m5max.json  sweep_qwen3b.json  torquant_cert_mistral7b.json  torquant_cert_qwen25_7b_instruct.json  torquant_certificate.py  tq_collapse_probe.py  tv_vs_ppl.py
