[project]
name = "turboquant"
version = "0.1.0"
description = "TurboQuant + REFRACT: KV-cache quantization (TurboQuant) and quality oracle (REFRACT)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Tom (TheTom)" },
]
keywords = ["llm", "kv-cache", "quantization", "evaluation", "llama-cpp", "mlx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# REFRACT itself has zero non-stdlib deps — kept that way deliberately so
# `pip install .` for the alpha is one command and pulls nothing extra.
# numpy / scipy / etc. live under the `turboquant` extra below; they're
# only needed for the TurboQuant Python implementation, NOT for REFRACT.
dependencies = []

[project.optional-dependencies]
# REFRACT alpha testers: `pip install -e .` is enough. These extras are
# only needed if you run the matching backend.
refract-mlx = [
    "mlx>=0.20",
    "mlx-lm>=0.31",  # qwen3_5 + gemma-4 support requires 0.31+
]
refract-vllm = [
    "vllm>=0.5",
]
refract-sglang = [
    # SGLang backend is HTTP-based; the user runs the SGLang server
    # separately (typically via Docker). REFRACT only needs a HTTP client
    # and a tokenizer to construct prompt token IDs.
    "requests>=2.28",
    "transformers>=4.40",
]
# TurboQuant Python implementation (separate from REFRACT). Install with
# `pip install -e .[turboquant]` if you're running benchmarks or unit tests
# under turboquant/.
turboquant = [
    "numpy>=1.24",
    "scipy>=1.10",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "coverage>=7.0",
]
bench = [
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/TheTom/turboquant_plus"
Repository = "https://github.com/TheTom/turboquant_plus"
Issues = "https://github.com/TheTom/turboquant_plus/issues"

[project.scripts]
refract = "refract.cli:main"

[tool.setuptools.packages.find]
include = ["turboquant*", "refract*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Both turboquant/ and refract/ ship their own tests/ subtree.
testpaths = ["tests", "refract/tests"]
